--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 
     <title>Les composants web</title>
     <script src="app.js" type="module" defer></script>
@@ -22,11 +23,17 @@
                 <second-timer prefix="mon compteur"></second-timer>
             </div>
             <br>
+            <div class="form-group">
+                <label for="start">date debut</label>
+                <input type="text" id="start" class="form-control js-datepicker">
+            </div>
+            <br>
             <button id="add" class="btn btn-secondary">ajouter</button>
         </div>
     </div>
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 
 </body>
 </html>
