--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                 <second-timer prefix="mon compteur"></second-timer>
             </div>
             <br>
-            <div class="form-group">
+            <!--div class="form-group">
                 <label for="start">date debut</label>
                 <input type="text" id="start" class="form-control" is="date-picker">
-            </div>
+            </div-->
             <br>
             <button id="add" class="btn btn-secondary">ajouter</button>
             <br>
